--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 # Basic Information 
-title: Your Name
+title: Xiaoyi Han
 position: Ph.D. Student
 affiliation: Your Affiliation
-email: yourname (at) example.edu
+email: hanxiaoyicoder (at) gmail (dot) com
+
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
