--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Xiaoyi Han
 position: Ph.D. Student
-affiliation: Your Affiliation
+affiliation: None
 email: hanxiaoyicoder (at) gmail (dot) com
 
 
@@ -15,7 +15,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/
 cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
+github_link: https://github.com/XiaoyiHan6/
 linkedin: https://www.linkedin.com/
 twitter: https://twitter.com/
 
