--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ canonical: https://xiaoyihan6.github.io/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/
-cv_link: assets/files/curriculum_vitae.pdf
+# cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/XiaoyiHan6/
 zhihu: https://www.zhihu.com/people/yong-hu-10010/
 # linkedin: https://www.linkedin.com/
@@ -41,7 +41,7 @@ font: "Serif" # or "Sans Serif"
 
 # Google Analytics ID
 # Please remove this if you don't use Google Analytics
-google_analytics: UA-111540567-4
+google_analytics: G-BWSQR8Z057
 
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
