--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: hanxiaoyicoder (at) gmail (dot) com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
+keywords: Homepage
 description: Welcome to Xiaoyi's academic personal homepage.
 canonical: https://xiaoyihan6.github.io/
 
