--- a/_config.yml
+++ b/_config.yml
@@ -48,9 +48,13 @@ footnote_link: https://github.com/yaoyao-liu/minimal-light
 # Otherwise, the analytics information of your website will be recorded to my ClustrMaps accounts.
 clustrmaps_id: -s43ATbDGEvLvim5I_pxJYjiU7AVK1qCwhqn975emRM
 
+# Google Analytics ID
+# Please remove this if you don't use Google Analytics
+google_analytics: G-BWSQR8Z057
+
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
-# remote_theme: yaoyao-liu/minimal-light
+remote_theme: yaoyao-liu/minimal-light
 
 # The following files will be removed from the generated website.
 exclude:
